# VoxFlow_AI

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/core/: color.py  preprocessor.py  prompts.py  transcriber.py
backend/databases/: preprocessings.jsonl  transcriptions.jsonl
backend/evaluations/: about_evaluations.md
backend/evaluations/preprocessor/: ai_as_judge.py  evaluation_summary.md  functional_correctness.py  functional_executions.json  judge_evaluation_summary.md  judge_executions.jsonl
backend/evaluations/test_data/preprocessor/: preprocessings.jsonl  transcriptions_data.jsonl
backend/evaluations/test_data/transcriber/invalids/: test10.docx
backend/evaluations/test_data/transcriber/valids/: test4.flac  test6.aac  test7.wma
backend/evaluations/transcriber/: functional_correctness.py  functional_evaluation_results.jsonl  functional_evaluation_summary.md  lexical_evaluation_summary.md  lexical_evaluations_result.jsonl  lexical_similarity.py  transcriptions_reference_data.jsonl
backend/tools/: email_sender.py  text_extracter.py  translator.py
frontend/: package-lock.json
frontend/src/: App.jsx
